test/fail/macro-ident-outside.rnp
$a
---
SyntaxError: Unexpected token
fail/macro-ident-outside.rnp:1:1
$a
^^
